change element position values to try and fix overlap on mobile

--- a/demo/css/demo.scss
+++ b/demo/css/demo.scss
@@ -73,9 +73,11 @@ html, body, .page-wrapper {
 		.row {
 			margin-bottom: 50px;
 			height: 30%;
+			position: relative;
 
 			> .columns {
 				height: 100%;
+				position: relative;
 			}
 		}
 
